GET-1465 | test(codebase): installed and configured phpunit to run and generate code coverage

--- a/.gitignore
+++ b/.gitignore
@@ -233,7 +233,7 @@ composer.lock
 ##### Coverage and quality assurance files
 
 /coverage/
+coverage.xml
 .php-cs-fixer.cache
 .phpcs-cache
-
-
+.phpunit.result.cache
