--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,10 @@
   ],
   "require": {
     "php": ">=7.4",
-    "guzzlehttp/guzzle": "^7.0"
+    "guzzlehttp/guzzle": "^7.0",
+    "symfony/validator": "^6.1",
+    "doctrine/annotations": "^1.13",
+    "symfony/serializer": "^6.1"
   },
   "require-dev": {
     "phpmd/phpmd": "^2",
