GET-1465 | chore(github-ci): build github ci for test and quality assurance

--- a/composer.json
+++ b/composer.json
@@ -15,9 +15,7 @@
     "guzzlehttp/guzzle": "^7.0",
     "symfony/validator": "^6.1",
     "doctrine/annotations": "^1.13",
-    "symfony/serializer": "^6.1",
-    "symfony/cache": "^6.1",
-    "symfony/dependency-injection": "^6.1"
+    "symfony/serializer": "^6.1"
   },
   "require-dev": {
     "phpmd/phpmd": "^2",
@@ -48,7 +46,7 @@
       "php -d memory_limit=-1 vendor/bin/php-cs-fixer fix --config=.php-cs-fixer.dist.php --dry-run"
     ],
     "phpmd": [
-      "php -d memory_limit=-1 vendor/bin/phpmd src,tests text phpmd.xml"
+      "php -d memory_limit=-1 vendor/bin/phpmd src,tests text phpmd.ruleset.xml"
     ],
     "phpcs": [
       "php -d memory_limit=-1 vendor/bin/phpcs phpcs.xml src/"
