GET-1465 | chore(github-ci): downgraded to symofny 5.x components to keep retrocompatibility with php 7.4 and 8.0

--- a/composer.json
+++ b/composer.json
@@ -13,9 +13,10 @@
   "require": {
     "php": ">=7.4",
     "guzzlehttp/guzzle": "^7.0",
-    "symfony/validator": "^6.1",
+    "symfony/validator": "^v5.4.8",
     "doctrine/annotations": "^1.13",
-    "symfony/serializer": "^6.1"
+    "symfony/serializer": "^5.4.9",
+    "symfony/cache": "^5.4.9"
   },
   "require-dev": {
     "phpmd/phpmd": "^2",
