GET-1465 | feat(entities): built Money entity, needs more tests

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -2,7 +2,7 @@ name: Test CI
 
 on:
   push:
-    branches: [ main ]
+    branches: [ "main", "GET-1465" ]
   pull_request:
     branches: [ main ]
 
