--- a/.github/workflows/qa.yml
+++ b/.github/workflows/qa.yml
@@ -2,7 +2,7 @@ name: Quality Assurance CI
 
 on:
   push:
-    branches: [ main ]
+    branches: [ "main", "GET-1465" ]
   pull_request:
     branches: [ main ]
 
