GET-1465 | feat(client): created .env for secret handling in local environment, completed auth request entity and started client, updated github-ci to use secrets

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -8,6 +8,12 @@ on:
 
   workflow_dispatch:
 
+env: # Or as an environment variable
+  TEST_USERNAME: ${{ secrets.TEST_USERNAME }}
+  TEST_PASSWORD: ${{ secrets.TEST_PASSWORD }}
+  TEST_MERCHANT_ID: ${{ secrets.TEST_MERCHANT_ID }}
+  TEST_WEGETFINANCING_URL: ${{ secrets.TEST_WEGETFINANCING_URL }}
+
 jobs:
 
   tests:
