GET-1465 | fix(tests): changed composer.json psr4 namespace for tests

--- a/composer.json
+++ b/composer.json
@@ -33,9 +33,9 @@
   },
   "autoload-dev": {
     "psr-4": {
-      "WeGetFinancingSDKUnit\\": "tests/Unit",
-      "WeGetFinancingSDKFunctional\\": "tests/Functional",
-      "WeGetFinancingSDKIntegration\\": "tests/Integration"
+      "Unit\\": "tests/Unit",
+      "Functional\\": "tests/Functional",
+      "Integration\\": "tests/Integration"
     }
   },
   "scripts": {
