GET-1465 | fix(application): changed namespace for better packagist usage, removed pipeline on working branch

--- a/composer.json
+++ b/composer.json
@@ -28,7 +28,7 @@
   },
   "autoload": {
     "psr-4": {
-      "WeGetFinancingSDK\\": "src/"
+      "WeGetFinancing\\SDK\\": "src/"
     }
   },
   "autoload-dev": {
