GET-1465 | fix(github-ci): removed pipeline on working branch

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -2,7 +2,7 @@ name: Test CI
 
 on:
   push:
-    branches: [ "main", "GET-1465" ]
+    branches: [ main ]
   pull_request:
     branches: [ main ]
 
