GET-1682 | feat(entity validation messages): fixed validation messages and validator on merchant transaction id to match magento requirements

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -8,7 +8,7 @@ on:
 
   workflow_dispatch:
 
-env: # Or as an environment variable
+env:
   TEST_USERNAME: ${{ secrets.TEST_USERNAME }}
   TEST_PASSWORD: ${{ secrets.TEST_PASSWORD }}
   TEST_MERCHANT_ID: ${{ secrets.TEST_MERCHANT_ID }}
