--- a/composer.json
+++ b/composer.json
@@ -4,6 +4,7 @@
   "minimum-stability": "stable",
   "prefer-stable": true,
   "license": "LGPL-3.0-only",
+  "version": "2.3.0",
   "authors": [
     {
       "name": "Riccardo De Leo",
@@ -11,7 +12,7 @@
     }
   ],
   "require": {
-    "php": ">=7.4",
+    "php": ">=8.0",
     "ext-json": "*",
     "guzzlehttp/guzzle": "^7.0",
     "symfony/validator": "^v5.4.8",
