GET-2124 | feat(ppe): Implemented test call

--- a/.env.dist
+++ b/.env.dist
@@ -1,3 +1,6 @@
 TEST_USERNAME=
 TEST_PASSWORD=
 TEST_MERCHANT_ID=
+MERCHANT_TOKEN_EMPTY=use demo default a token
+MERCHANT_TOKEN_SUCCESS=use demo master token
+MERCHANT_TOKEN_ERROR=fakeToken
