GET-2124 | feat(ppe): github pipeline passing correct secrets

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -15,6 +15,9 @@ env:
   TEST_WEGETFINANCING_URL: ${{ secrets.TEST_WEGETFINANCING_URL }}
   TEST_WEGETFINANCING_URL_V3: ${{ secrets.TEST_WEGETFINANCING_URL_V3 }}
   CC_TEST_REPORTER_ID: ${{ secrets.CC_TEST_REPORTER_ID }}
+  MERCHANT_TOKEN_EMPTY: ${{ secrets.MERCHANT_TOKEN_EMPTY }}
+  MERCHANT_TOKEN_SUCCESS: ${{ secrets.MERCHANT_TOKEN_SUCCESS }}
+  MERCHANT_TOKEN_ERROR: ${{ secrets.MERCHANT_TOKEN_ERROR }}
 
 jobs:
 
