--- a/composer.json
+++ b/composer.json
@@ -15,10 +15,10 @@
     "php": ">=8.0",
     "ext-json": "*",
     "guzzlehttp/guzzle": "^7.0",
-    "symfony/validator": "^v5.4.8",
-    "doctrine/annotations": "^1.13",
-    "symfony/serializer": "^5.4.9",
-    "symfony/cache": "^5.4.9"
+    "symfony/validator": "6.3.7",
+    "doctrine/annotations": "^1.14.3",
+    "symfony/serializer": "6.3.7",
+    "symfony/cache": "6.3.6"
   },
   "require-dev": {
     "phpmd/phpmd": "^2",
