--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
   "minimum-stability": "stable",
   "prefer-stable": true,
   "license": "LGPL-3.0-only",
-  "version": "2.4.1",
+  "version": "4.0.0",
   "authors": [
     {
       "name": "Riccardo De Leo",
@@ -12,13 +12,13 @@
     }
   ],
   "require": {
-    "php": ">=8.0",
+    "php": ">=8.2",
     "ext-json": "*",
     "guzzlehttp/guzzle": "^7.0",
-    "symfony/validator": "5.4.8",
+    "symfony/validator": "7.0.*",
     "doctrine/annotations": "^1.14.3",
-    "symfony/serializer": "v4.4.47",
-    "symfony/cache": "v5.4.9"
+    "symfony/serializer": "7.*.*",
+    "symfony/cache": "7.*"
   },
   "require-dev": {
     "phpmd/phpmd": "^2",
